# Telegram-CAPTCHA

./: .gitignore  LICENSE  README.md  anti_flood.py  challenge.py  config_example.json  main.py  pyproject.toml  requirements.txt  timeout.py
