[project]
name = "telegram-captcha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catbot",
    "humanize>=4.12.3",
    "mwclient>=0.11.0",
]

[tool.uv.sources]
catbot = { git = "https://github.com/The-Earth/catbot.git" }
